// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders default <CategoryMenu /> 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  width: 100%;
  text-transform: uppercase;
}

<form
    class="c0"
  />
</DocumentFragment>
`;

exports[`renders default <Form /> 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  max-width: 90%;
}

<form
    class="c0"
  />
</DocumentFragment>
`;

exports[`renders default <FormAlt /> 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  max-width: 90%;
}

.c1 {
  padding: 1rem;
}

<form
    class="c0 c1"
  />
</DocumentFragment>
`;
